[package]

name = "nntp"
version = "0.0.5"
authors = ["Matt McCoy <mattnenterprise@yahoo.com>"]
repository = "https://github.com/mattnenterprise/rust-nntp"
description = "NNTP client for Rust"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
bufstream = "0.1"
prettytable-rs = "0.10"
native-tls = "0.2"
pretty-bytes = "0.2"
itertools = "0.11"
log = "0.4"
env_logger = "0.10"
yenc = "0.2"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
bytes = "1"